<resources>
    <string name="app_name">Plant Nany</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_inter_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_rewarded_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Setting</string>
    <string name="title_graph">Graph</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_pots">Pots</string>
    <string name="title_all_plants">All Plants</string>
    <string name="str_continue">Continue</string>

    <string name="add_info_text">Please provide some information to customize the experience for you…!!</string>
    <string name="weight_hint">Enter the weight</string>
    <string name="workout_hint">Enter the Workout Hour</string>
    <string name="wakeup_hint">WakeUp Time</string>
    <string name="sleeping_hint">Sleepting Hint</string>

    <string name="pref_notification_message_value">Hey… Lets drink some water…</string>
</resources>