<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_pots"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_pots" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/ic_baseline_auto_graph_24"
        android:title="@string/title_graph" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_drop"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_all_plants"
        android:icon="@drawable/ic_baseline_contact_page_24"
        android:title="@string/title_all_plants" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_setting" />


</menu>