<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.plantnany.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pots"
        android:name="com.example.plantnany.fragments.AllPlantsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_plants_all" />

    <fragment
        android:id="@+id/navigation_all_plants"
        android:name="com.example.plantnany.fragments.GraphFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_graph" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.plantnany.fragments.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/potsFragment"
        android:name="com.example.plantnany.fragments.PotsFragment"
        android:label="fragment_pots"
        tools:layout="@layout/fragment_pots" />
</navigation>